# wine-chemistry-api

./: .gitignore  README.md  pyproject.toml
ml_model/: wine_quality_model.joblib
wine_chemistry_api/: app.py
