[tool.poetry]
name = "wine-chemistry-api"
version = "0.1.0"
description = "Wine API"
authors = ["Eric Dasse <christ.gououi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "wine_chemistry_api"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
